--- a/src/components/sbb-autocomplete/styles/sbb-autocomplete.component.scss
+++ b/src/components/sbb-autocomplete/styles/sbb-autocomplete.component.scss
@@ -5,8 +5,8 @@
 
 :host {
   display: block;
-  border-radius: pxToRem(var(--border-radius-4x));
-  background-color: var(--color-white-default);
+  border-radius: pxToRem(var(--sbb-border-radius-4x));
+  background-color: var(--sbb-color-white-default);
 
   --input-height: 48; // TODO Design Token??
 
@@ -36,17 +36,17 @@
   right: 0;
   left: 0;
   z-index: -1;
-  background-color: var(--color-white-default);
+  background-color: var(--sbb-color-white-default);
 
-  border-radius: pxToRem(var(--border-radius-4x));
-  padding-block-start: calc(#{pxToRem(var(--input-height))} + #{pxToRem(var(--spacing-fixed-3x))});
-  padding-block-end: pxToRem(var(--spacing-fixed-3x));
-  padding-inline-start: pxToRem(var(--spacing-responsive-xxxs-zero));
-  padding-inline-end: pxToRem(var(--spacing-responsive-xxxs-zero));
+  border-radius: pxToRem(var(--sbb-border-radius-4x));
+  padding-block-start: calc(#{pxToRem(var(--input-height))} + #{pxToRem(var(--sbb-spacing-fixed-3x))});
+  padding-block-end: pxToRem(var(--sbb-spacing-fixed-3x));
+  padding-inline-start: pxToRem(var(--sbb-spacing-responsive-xxxs-zero));
+  padding-inline-end: pxToRem(var(--sbb-spacing-responsive-xxxs-zero));
 
   @include mq($from: medium) {
-    padding-inline-start: pxToRem(var(--spacing-responsive-xxxs-medium));
-    padding-inline-end: pxToRem(var(--spacing-responsive-xxxs-medium));
+    padding-inline-start: pxToRem(var(--sbb-spacing-responsive-xxxs-medium));
+    padding-inline-end: pxToRem(var(--sbb-spacing-responsive-xxxs-medium));
   }
 
   @include ifForcedColors() {
