--- a/src/components/sbb-clock/styles/sbb-clock.component.scss
+++ b/src/components/sbb-clock/styles/sbb-clock.component.scss
@@ -75,7 +75,7 @@
   animation-timing-function: linear;
   animation-play-state: var(--clock-animation-play-state);
   animation-iteration-count: infinite;
-  fill: var(--color-red-default);
+  fill: var(--sbb-color-red-default);
 }
 
 .sbb-clock__hand-seconds--initial-minute {
