--- a/src/components/sbb-timetable-barrier-free/styles/sbb-timetable-barrier-free.component.scss
+++ b/src/components/sbb-timetable-barrier-free/styles/sbb-timetable-barrier-free.component.scss
@@ -5,7 +5,7 @@
 
 :host {
   --barrier-free-icon-size: 24;
-  --barrier-free-icon-padding-inline-start: calc(var(--barrier-free-icon-size) + var(--spacing-fixed-1x));
+  --barrier-free-icon-padding-inline-start: calc(var(--barrier-free-icon-size) + var(--sbb-spacing-fixed-1x));
 }
 
 .barrier-free {
@@ -13,7 +13,7 @@
   position: relative;
   @include text-xs--regular();
   margin: 0;
-  color: var(--color-anthracite-default);
+  color: var(--sbb-color-anthracite-default);
   padding-inline-start: pxToRem(var(--barrier-free-icon-padding-inline-start));
 }
 
