--- a/src/components/sbb-timetable-occupancy/styles/sbb-timetable-occupancy.component.scss
+++ b/src/components/sbb-timetable-occupancy/styles/sbb-timetable-occupancy.component.scss
@@ -14,7 +14,7 @@
   display: flex;
   align-items: center;
   flex-wrap: nowrap;
-  gap: pxToRem(var(--spacing-fixed-2x));
+  gap: pxToRem(var(--sbb-spacing-fixed-2x));
 }
 
 .occupancy__list-item {
