--- a/src/global/mixins/mixins_a11y.scss
+++ b/src/global/mixins/mixins_a11y.scss
@@ -8,7 +8,7 @@
 }
 
 @mixin focusOutline {
-  outline-offset: pxToRem(var(--focus-outline-offset));
+  outline-offset: pxToRem(var(--sbb-focus-outline-offset));
   outline: var(--focus-outline-color) solid pxToRem(var(--focus-outline-width));
 
   @include ifForcedColors() {
@@ -29,5 +29,5 @@
 }
 
 @mixin scrollMarginBlockStart() {
-  scroll-margin-block-start: pxToRem(var(--spacing-fixed-10x));
+  scroll-margin-block-start: pxToRem(var(--sbb-spacing-fixed-10x));
 }
