--- a/src/global/theme/sbb-ch/mode--dark/variables.scss
+++ b/src/global/theme/sbb-ch/mode--dark/variables.scss
@@ -1,3 +1,3 @@
 @mixin theme-sbb-ch-mode--dark-variables {
-  --lyne-font-default-color: var(--color-white-default);
+  --lyne-font-default-color: var(--sbb-color-white-default);
 }
