--- a/src/components/sbb-accordion/styles/sbb-accordion.component.scss
+++ b/src/components/sbb-accordion/styles/sbb-accordion.component.scss
@@ -11,33 +11,33 @@
   // used in accordion-item
   --body-padding-inline: 0;
   --header-padding-inline: 0;
-  --border-width: var(--border-width-1x);
+  --border-width: var(--sbb-border-width-1x);
   --border-radius-start-start: 0;
   --border-radius-start-end: 0;
   --border-radius-end-start: 0;
   --border-radius-end-end: 0;
-  --color-background-hover: var(--color-white-default);
+  --color-background-hover: var(--sbb-color-white-default);
 
   @include ifForcedColors() {
-    --item-margin-block: var(--spacing-fixed-1x);
-    --body-padding-inline: var(--spacing-fixed-6x);
-    --header-padding-inline: var(--spacing-fixed-6x);
+    --item-margin-block: var(--sbb-spacing-fixed-1x);
+    --body-padding-inline: var(--sbb-spacing-fixed-6x);
+    --header-padding-inline: var(--sbb-spacing-fixed-6x);
   }
 
 }
 
 .accordion--non-white {
-  --item-margin-block: var(--spacing-fixed-1x);
+  --item-margin-block: var(--sbb-spacing-fixed-1x);
 
   // used in accordion-item
-  --body-padding-inline: var(--spacing-fixed-6x);
-  --header-padding-inline: var(--spacing-fixed-6x);
+  --body-padding-inline: var(--sbb-spacing-fixed-6x);
+  --header-padding-inline: var(--sbb-spacing-fixed-6x);
   --border-width: 0;
-  --border-radius-start-start: var(--border-radius-1x);
-  --border-radius-start-end: var(--border-radius-1x);
-  --border-radius-end-start: var(--border-radius-1x);
-  --border-radius-end-end: var(--border-radius-1x);
-  --color-background-hover: var(--color-white-alpha-60);
+  --border-radius-start-start: var(--sbb-border-radius-1x);
+  --border-radius-start-end: var(--sbb-border-radius-1x);
+  --border-radius-end-start: var(--sbb-border-radius-1x);
+  --border-radius-end-end: var(--sbb-border-radius-1x);
+  --color-background-hover: var(--sbb-color-white-alpha-60);
 }
 
 ::slotted(sbb-accordion-item:not(:first-child)) {
@@ -45,12 +45,12 @@
 }
 
 ::slotted(sbb-accordion-item:first-child) {
-  --border-radius-start-start: var(--border-radius-8x);
-  --border-radius-start-end: var(--border-radius-8x);
+  --border-radius-start-start: var(--sbb-border-radius-8x);
+  --border-radius-start-end: var(--sbb-border-radius-8x);
 }
 
 ::slotted(sbb-accordion-item:last-child) {
-  --border-radius-end-start: var(--border-radius-8x);
-  --border-radius-end-end: var(--border-radius-8x);
+  --border-radius-end-start: var(--sbb-border-radius-8x);
+  --border-radius-end-end: var(--sbb-border-radius-8x);
   --border-width: 0;
 }
