--- a/src/components/sbb-card-badge/styles/sbb-card-badge.component.scss
+++ b/src/components/sbb-card-badge/styles/sbb-card-badge.component.scss
@@ -4,11 +4,11 @@
 @include host-component-properties;
 
 :host {
-  --card-badge-color-primary: var(--color-white-default);
-  --card-badge-color-primary-negative: var(--color-black-default);
-  --card-badge-background-color-primary: var(--color-black-default);
-  --card-badge-background-color-primary-negative: var(--color-white-default);
-  --card-badge-border-color-primary-negative: var(--color-aluminium-default);
+  --card-badge-color-primary: var(--sbb-color-white-default);
+  --card-badge-color-primary-negative: var(--sbb-color-black-default);
+  --card-badge-background-color-primary: var(--sbb-color-black-default);
+  --card-badge-background-color-primary-negative: var(--sbb-color-white-default);
+  --card-badge-border-color-primary-negative: var(--sbb-color-aluminium-default);
 
   @include ifForcedColors() {
     border-inline-start: pxToRem(1) solid CanvasText;
@@ -22,12 +22,12 @@
   position: absolute;
   inset-block-start: 0;
   inset-inline-end: 0;
-  padding-inline-start: pxToRem(var(--spacing-fixed-1x));
-  padding-inline-end: pxToRem(var(--spacing-fixed-8x));
-  border-end-start-radius: pxToRem(var(--border-radius-4x));
+  padding-inline-start: pxToRem(var(--sbb-spacing-fixed-1x));
+  padding-inline-end: pxToRem(var(--sbb-spacing-fixed-8x));
+  border-end-start-radius: pxToRem(var(--sbb-border-radius-4x));
 
   // Left to right expression
-  right: pxToRem(var(--spacing-fixed-3x), true);
+  right: pxToRem(var(--sbb-spacing-fixed-3x), true);
   transform: skew(16deg, 0deg);
   > * {
     transform: skew(-16deg, 0deg);
@@ -36,7 +36,7 @@
   // Right to left expression
   &[dir="rtl"] {
     right: initial;
-    left: pxToRem(var(--spacing-fixed-3x), true);
+    left: pxToRem(var(--sbb-spacing-fixed-3x), true);
     transform: skew(-16deg, 0deg);
     > * {
       transform: skew(16deg, 0deg);
