--- a/src/components/sbb-input-error/styles/sbb-input-error.component.scss
+++ b/src/components/sbb-input-error/styles/sbb-input-error.component.scss
@@ -5,9 +5,9 @@
 
 :host {
   display: block;
-  margin-block-start: pxToRem(var(--spacing-fixed-1x));
+  margin-block-start: pxToRem(var(--sbb-spacing-fixed-1x));
 
-  --text-color: var(--color-red125-default);
+  --text-color: var(--sbb-color-red125-default);
   --icon-size: 14;
 
   @include ifForcedColors {
@@ -27,7 +27,7 @@
 
 .input-label-error__icon {
   line-height: pxToRem(var(--icon-size));
-  margin-inline-end: pxToRem(var(--spacing-fixed-1x));
+  margin-inline-end: pxToRem(var(--sbb-spacing-fixed-1x));
 }
 
 .input-label-error__icon svg {
