--- a/src/components/sbb-signet/styles/sbb-signet.component.scss
+++ b/src/components/sbb-signet/styles/sbb-signet.component.scss
@@ -7,8 +7,8 @@
 
   // Default Signet Styles
   // ----------------------------------------------
-  --sbb-signet-background-color: var(--color-red-default);
-  --sbb-signet-icon-color: var(--color-white-default);
+  --sbb-signet-background-color: var(--sbb-color-red-default);
+  --sbb-signet-icon-color: var(--sbb-color-white-default);
 
   // Forced Colors Variant
   // ----------------------------------------------
@@ -74,5 +74,5 @@
 // White on Black Variant
 // ----------------------------------------------
 .sbb-signet--white-on-black {
-  --sbb-signet-background-color: var(--color-black-default);
+  --sbb-signet-background-color: var(--sbb-color-black-default);
 }
