--- a/src/global/mixins/mixins_card.scss
+++ b/src/global/mixins/mixins_card.scss
@@ -3,7 +3,7 @@
 // -----------------------------------------------------------------------------
 
 @mixin card-host-properties {
-  --card-border-radius: #{pxToRem(var(--border-radius-4x))};
+  --card-border-radius: #{pxToRem(var(--sbb-border-radius-4x))};
   --card-padding-top: ;
   --card-padding-right: ;
   --card-padding-bottom: ;
@@ -57,19 +57,19 @@
 
 // Card appearance
 @mixin card--primary {
-  --card-background-color: var(--color-milk-default);
+  --card-background-color: var(--sbb-color-milk-default);
 }
 
 @mixin card--primary-negative {
-  --card-background-color: var(--color-white-default);
+  --card-background-color: var(--sbb-color-white-default);
 }
 
 // Card sizing
 @mixin card--xs {
-  --card-padding-top: #{pxToRem(var(--spacing-fixed-3x))};
-  --card-padding-right: #{pxToRem(var(--spacing-responsive-xxs))};
-  --card-padding-bottom: #{pxToRem(var(--spacing-fixed-3))};
-  --card-padding-left: #{pxToRem(var(--spacing-responsive-xxs))};
+  --card-padding-top: #{pxToRem(var(--sbb-spacing-fixed-3x))};
+  --card-padding-right: #{pxToRem(var(--sbb-spacing-responsive-xxs))};
+  --card-padding-bottom: #{pxToRem(var(--sbb-spacing-fixed-3))};
+  --card-padding-left: #{pxToRem(var(--sbb-spacing-responsive-xxs))};
   // @include spacing-responsive-xxs('--card-padding-right');
   // @include spacing-responsive-xxs('--card-padding-left');
   // --card-padding-top: #{pxToRem(var(--spacing-fixed-3x))};
@@ -77,10 +77,10 @@
 }
 
 @mixin card--s {
-  --card-padding-top: #{pxToRem(var(--spacing-responsive-xxxs))};
-  --card-padding-right: #{pxToRem(var(--spacing-responsive-xxs))};
-  --card-padding-bottom: #{pxToRem(var(--spacing-responsive-xxxs))};
-  --card-padding-left: #{pxToRem(var(--spacing-responsive-xxs))};
+  --card-padding-top: #{pxToRem(var(--sbb-spacing-responsive-xxxs))};
+  --card-padding-right: #{pxToRem(var(--sbb-spacing-responsive-xxs))};
+  --card-padding-bottom: #{pxToRem(var(--sbb-spacing-responsive-xxxs))};
+  --card-padding-left: #{pxToRem(var(--sbb-spacing-responsive-xxs))};
   // @include spacing-responsive-xxxs('--card-padding-top');
   // @include spacing-responsive-xxs('--card-padding-right');
   // @include spacing-responsive-xxxs('--card-padding-bottom');
@@ -88,10 +88,10 @@
 }
 
 @mixin card--m {
-  --card-padding-top: #{pxToRem(var(--spacing-fixed-4x))};
-  --card-padding-right: #{pxToRem(var(--spacing-responsive-xxs))};
-  --card-padding-bottom: #{pxToRem(var(--spacing-fixed-4x))};
-  --card-padding-left: #{pxToRem(var(--spacing-responsive-xxs))};
+  --card-padding-top: #{pxToRem(var(--sbb-spacing-fixed-4x))};
+  --card-padding-right: #{pxToRem(var(--sbb-spacing-responsive-xxs))};
+  --card-padding-bottom: #{pxToRem(var(--sbb-spacing-fixed-4x))};
+  --card-padding-left: #{pxToRem(var(--sbb-spacing-responsive-xxs))};
   // @include spacing-responsive-xxs('--card-padding-right');
   // @include spacing-responsive-xxs('--card-padding-left');
   // --card-padding-top: #{pxToRem(var(--spacing-fixed-4x))};
@@ -99,10 +99,10 @@
 }
 
 @mixin card--m--tall {
-  --card-padding-top: #{pxToRem(var(--spacing-fixed-6x))};
-  --card-padding-right: #{pxToRem(var(--spacing-responsive-xxs))};
-  --card-padding-bottom: #{pxToRem(var(--spacing-fixed-4x))};
-  --card-padding-left: #{pxToRem(var(--spacing-responsive-xxs))};
+  --card-padding-top: #{pxToRem(var(--sbb-spacing-fixed-6x))};
+  --card-padding-right: #{pxToRem(var(--sbb-spacing-responsive-xxs))};
+  --card-padding-bottom: #{pxToRem(var(--sbb-spacing-fixed-4x))};
+  --card-padding-left: #{pxToRem(var(--sbb-spacing-responsive-xxs))};
   // @include spacing-responsive-xxs('--card-padding-right');
   // @include spacing-responsive-xxs('--card-padding-left');
   // --card-padding-top: #{pxToRem(var(--spacing-fixed-6x))};
@@ -110,10 +110,10 @@
 }
 
 @mixin card--l {
-  --card-padding-top: #{pxToRem(var(--spacing-responsive-xxs))};
-  --card-padding-right: #{pxToRem(var(--spacing-responsive-xxs))};
-  --card-padding-bottom: #{pxToRem(var(--spacing-responsive-xxs))};
-  --card-padding-left: #{pxToRem(var(--spacing-responsive-xxs))};
+  --card-padding-top: #{pxToRem(var(--sbb-spacing-responsive-xxs))};
+  --card-padding-right: #{pxToRem(var(--sbb-spacing-responsive-xxs))};
+  --card-padding-bottom: #{pxToRem(var(--sbb-spacing-responsive-xxs))};
+  --card-padding-left: #{pxToRem(var(--sbb-spacing-responsive-xxs))};
   // @include spacing-responsive-xxs('--card-padding-top');
   // @include spacing-responsive-xxs('--card-padding-right');
   // @include spacing-responsive-xxs('--card-padding-bottom');
@@ -121,10 +121,10 @@
 }
 
 @mixin card--l--tall  {
-  --card-padding-top: #{pxToRem(var(--spacing-fixed-6x))};
-  --card-padding-right: #{pxToRem(var(--spacing-responsive-xxs))};
-  --card-padding-bottom: #{pxToRem(var(--spacing-responsive-xxs))};
-  --card-padding-left: #{pxToRem(var(--spacing-responsive-xxs))};
+  --card-padding-top: #{pxToRem(var(--sbb-spacing-fixed-6x))};
+  --card-padding-right: #{pxToRem(var(--sbb-spacing-responsive-xxs))};
+  --card-padding-bottom: #{pxToRem(var(--sbb-spacing-responsive-xxs))};
+  --card-padding-left: #{pxToRem(var(--sbb-spacing-responsive-xxs))};
   // @include spacing-responsive-xxs('--card-padding-right');
   // @include spacing-responsive-xxs('--card-padding-bottom');
   // @include spacing-responsive-xxs('--card-padding-left');
@@ -132,10 +132,10 @@
 }
 
 @mixin card--xl {
-  --card-padding-top: #{pxToRem(var(--spacing-responsive-xxs))};
-  --card-padding-right: #{pxToRem(var(--spacing-responsive-s))};
-  --card-padding-bottom: #{pxToRem(var(--spacing-responsive-xxs))};
-  --card-padding-left: #{pxToRem(var(--spacing-responsive-s))};
+  --card-padding-top: #{pxToRem(var(--sbb-spacing-responsive-xxs))};
+  --card-padding-right: #{pxToRem(var(--sbb-spacing-responsive-s))};
+  --card-padding-bottom: #{pxToRem(var(--sbb-spacing-responsive-xxs))};
+  --card-padding-left: #{pxToRem(var(--sbb-spacing-responsive-s))};
   // @include spacing-responsive-xxs('--card-padding-top');
   // @include spacing-responsive-s('--card-padding-right');
   // @include spacing-responsive-xxs('--card-padding-bottom');
@@ -143,10 +143,10 @@
 }
 
 @mixin card--xl--tall {
-  --card-padding-top: #{pxToRem(var(--spacing-fixed-6x))};
-  --card-padding-right: #{pxToRem(var(--spacing-responsive-s))};
-  --card-padding-bottom: #{pxToRem(var(--spacing-responsive-xxs))};
-  --card-padding-left: #{pxToRem(var(--spacing-responsive-s))};
+  --card-padding-top: #{pxToRem(var(--sbb-spacing-fixed-6x))};
+  --card-padding-right: #{pxToRem(var(--sbb-spacing-responsive-s))};
+  --card-padding-bottom: #{pxToRem(var(--sbb-spacing-responsive-xxs))};
+  --card-padding-left: #{pxToRem(var(--sbb-spacing-responsive-s))};
   // @include spacing-responsive-s('--card-padding-right');
   // @include spacing-responsive-xxs('--card-padding-bottom');
   // @include spacing-responsive-s('--card-padding-left');
@@ -154,10 +154,10 @@
 }
 
 @mixin card--xxl {
-  --card-padding-top: #{pxToRem(var(--spacing-responsive-s))};
-  --card-padding-right: #{pxToRem(var(--spacing-responsive-s))};
-  --card-padding-bottom: #{pxToRem(var(--spacing-responsive-s))};
-  --card-padding-left: #{pxToRem(var(--spacing-responsive-s))};
+  --card-padding-top: #{pxToRem(var(--sbb-spacing-responsive-s))};
+  --card-padding-right: #{pxToRem(var(--sbb-spacing-responsive-s))};
+  --card-padding-bottom: #{pxToRem(var(--sbb-spacing-responsive-s))};
+  --card-padding-left: #{pxToRem(var(--sbb-spacing-responsive-s))};
   // @include spacing-responsive-s('--card-padding-top');
   // @include spacing-responsive-s('--card-padding-right');
   // @include spacing-responsive-s('--card-padding-bottom');
