--- a/src/global/mixins/mixins_grid_layout.scss
+++ b/src/global/mixins/mixins_grid_layout.scss
@@ -2,13 +2,13 @@
 	display: grid;
 	grid-template-columns: repeat(var(--grid-base-columns), 1fr);
   column-gap: pxToRem(var(--grid-base-gutter-responsive));
-  row-gap: pxToRem(var(--spacing-fixed-3x));
+  row-gap: pxToRem(var(--sbb-spacing-fixed-3x));
 }
 
 @mixin grid-base-top-products() {
   display: grid;
   column-gap: pxToRem(var(--grid-base-gutter-responsive));
-  row-gap: pxToRem(var(--spacing-fixed-3x));
+  row-gap: pxToRem(var(--sbb-spacing-fixed-3x));
 
   @include mq($from: medium) {
     grid-template-columns: repeat(var(--grid-base-columns), 1fr);
