--- a/src/global/mixins/mixins_spacing.scss
+++ b/src/global/mixins/mixins_spacing.scss
@@ -5,7 +5,7 @@
 
 @mixin page-spacing__inner() {
   @include mq($from: wide) {
-    width: calc(pxToRem($breakpoint-wide-min) - (2 * pxToRem(var(--page-base-offset-responsive))));
+    width: calc(pxToRem($sbb-breakpoint-wide-min) - (2 * pxToRem(var(--page-base-offset-responsive))));
     margin-inline-start: auto;
     margin-inline-end: auto;
   }
@@ -13,7 +13,7 @@
 
 @mixin page-spacing--ultra-plus__inner() {
   @include mq($from: ultra) {
-    width: pxToRem($breakpoint-ultra-min);
+    width: pxToRem($sbb-breakpoint-ultra-min);
     margin-inline-start: auto;
     margin-inline-end: auto;
   }
